# LibreSTR

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Tasks.md  retrieve_extern.py
LibreSTR/: AssetManager.cpp  AssetManager.h  Building.cpp  Building.h  BuildingIdentity.cpp  BuildingIdentity.h  BuildingSprite.cpp  CMakeLists.txt  GameLoader.cpp  GameLoader.h  GameLoadingState.cpp  GameLoadingState.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  GameObjectListener.cpp  GameObjectListener.h  GameOverlay.cpp  GameOverlay.h  GameState.cpp  GameState.h  HydrocarbonGaz.cpp  HydrocarbonGaz.h  IResource.cpp  IResource.h  ITileMap.cpp  ITileMap.h  LibreSTR.cbp  LibreSTRStyle.h  LibreSTRVersion.cpp.in  LibreSTRVersion.h  LoadableObject.cpp  LoadableObject.h  LoadingState.cpp  LoadingState.h  MPlayer.cpp  MPlayer.h  MainMenu.cpp  MainMenu.h  (+38 more)
LibreSTR/actions/: PauseGameAction.cpp  PauseGameAction.h  ToggleConsole.cpp  ToggleConsole.h
LibreSTR/ai/: CompLeafAction.cpp  CompLeafAction.h  CompLeafCondition.cpp  CompLeafCondition.h  Leaf.cpp  Leaf.h  LeafAction.cpp  LeafAction.h  LeafCondition.cpp  LeafCondition.h  MLeaf.cpp  MLeaf.h
LibreSTR/client/: GameClient.cpp  GameClient.h
LibreSTR/gui/: Console.cpp  Console.h  ErrorLabel.cpp  ErrorLabel.h  GameOverlay.cpp  GameOverlay.h  ILogStream.cpp  ILogStream.h  LibreSTRStyle.cpp  MiniMap.cpp  MiniMap.h  MultiSelectionPanel.cpp  MultiSelectionPanel.h  RadialItem.cpp  RadialItem.h  RadialMenu.cpp  RadialMenu.h  TopHud.cpp  TopHud.h  UnitInfoPanel.cpp  UnitInfoPanel.h
LibreSTR/maps/: BitMap.cpp  BitMap.h  GameMap.cpp  GameMap.h  GameMapEvent.cpp  GameMapEvent.h  GameMapEventListener.cpp  GameMapEventListener.h  GameMapEventThrower.cpp  GameMapEventThrower.h  IResource.h  ITileMap.h  MapGenerator.cpp  MapGenerator.h  PlayerMap.cpp  PlayerMap.h  Resource.cpp  Resource.h  ResourceIdentity.cpp  ResourceIdentity.h  Tile.cpp
LibreSTR/server/: GameServer.cpp  GameServer.h  PlayerConnection.cpp  PlayerConnection.h
LibreSTR/states/: GameState.cpp  GameState.h  LobbyState.cpp  LobbyState.h  MainMenu.cpp  MainMenu.h  MatchBrowser.cpp  MatchBrowser.h  OptionState.cpp  OptionState.h
LibreSTR/units/: AttackBuildingTask.cpp  AttackBuildingTask.h  AttackGroundUnitTask.cpp  AttackGroundUnitTask.h  BuildTask.cpp  BuildTask.h  Building.cpp  Building.h  BuildingIdentity.cpp  BuildingIdentity.h  BuildingSprite.h  CreateUnitEmitter.cpp  CreateUnitEmitter.h  CreateUnitJob.cpp  CreateUnitJob.h  CreateWorkerJob.cpp  CreateWorkerJob.h  GroundUnit.cpp  GroundUnit.h  GroundUnitIdentity.cpp  GroundUnitIdentity.h  GroundUnitSpriteManager.cpp  GroundUnitSpriteManager.h  HarvestTask.cpp  HarvestTask.h  Job.cpp  Job.h  JobEmitter.cpp  JobEmitter.h  MBuilding.cpp  MBuilding.h  MGroundUnit.cpp  MGroundUnit.h  MoveTask.cpp  MoveTask.h  Task.cpp  Task.h  Unit.cpp  Unit.h  UnitPath.cpp  (+6 more)
MapEditor/: CMakeLists.txt  EditItem.cpp  EditItem.h  MEMap.cpp  MEMap.h  METile.cpp  METile.h  MapEditMainMenu.cpp  MapEditMainMenu.h  MapEditState.cpp  MapEditState.h  MapFileVO.cpp  MapFileVO.h  MapItem.cpp  MapItem.h  MapSizeVO.cpp  MapSizeVO.h  NewMapState.cpp  NewMapState.h  main.cpp
MatchMaster/: CMakeLists.txt  MatchMaster.cpp  MatchMaster.h  main.cpp
STRData/: CMakeLists.txt  Directory.cpp  Directory.h  Entry.cpp  Entry.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  MapData.cpp  MapData.h  Match.cpp  Match.h
assets/: assets.def  barrack.res  base_building.res  building.res  command_center.res  house.res  hydrocarbongaz.res  melee.res  option.vars  titanium.res  worker.res
assets/sprites/: blue_barrack.spr  blue_command_center.spr  blue_construction_barrack.spr  blue_construction_command_center.spr  blue_construction_house.spr  blue_house.spr  blue_melee.dspr  blue_worker.dspr  building.spr  building_blue.spr  building_construct_blue.spr  building_construct_red.spr  building_red.spr  gaz.spr  grass.spr  placed_barrack.spr  placed_building.spr  placed_command_center.spr  placed_house.spr  red_barrack.spr  red_command_center.spr  red_construction_barrack.spr  red_construction_command_center.spr  red_construction_house.spr  red_house.spr  red_melee.dspr  red_worker.dspr  rock.spr  titanium.spr  worker_blue.spr
assets/sprites/tile/: grass.spr  none.spr  rock.spr
raw_assets/: blue_barrack.pdn  blue_command_center.pdn  blue_construction_barrack.pdn  blue_construction_command_center.pdn  construction_barrack.pdn  construction_building_64x64.pdn  construction_command_center.pdn  house_construct.pdn  placed_barrack_64x64.pdn  placed_building_32x32.pdn  placed_building_64x64.pdn  placed_command_center.pdn  placed_house.pdn  red_barrack.pdn  red_command_center.pdn  red_construction_barrack.pdn  red_construction_command_center.pdn
